--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,69 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
-    <link href="css/style.css" rel="stylesheet">
+
+  <link href="css/style.css" rel="stylesheet">
   <title>Discussion Forum</title>
 </head>
 
 <body>
   <div class="my-banner">Awesome Discussion Form</div>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item modal-preauth">
+            <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal-signin-form">Sign In</button>
+          </li>
+          <li class="nav-item modal-postauth">
+            <button class="btn btn-outline-primary">Home</button>
+          </li>
+          <li class="nav-item modal-postauth">
+            <button class="btn btn-outline-primary">About</button>
+          </li>
+          <li class="nav-item modal-postauth">
+            <button class="btn btn-outline-danger">Sign Out</button>
+          </li>
+        </ul>
+        <div class="modal-postauth">
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Modal Sign In -->
+<div class="modal fade" id="modal-signin-form" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-signin-form-abel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal-signin-form-abel">Sign In Please!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="form-signin" method="post">
+          <div>
+            <input type="email" name="email" placeholder="email address">
+          </div>
+          <div>
+            <input type="password" name="password" placeholder="password">
+          </div>
+          <div>
+            <button class="btn btn-outline-primary" type="submit">Sign </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
