firebase auth commit

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="modal-signin-form-abel">Sign In Please!</h5>
+        <h5 class="modal-title" id="modal-signin-form-label">Sign In Please!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -65,7 +65,7 @@
             <input type="password" name="password" placeholder="password">
           </div>
           <div>
-            <button class="btn btn-outline-primary" type="submit">Sign </button>
+            <button class="btn btn-outline-primary" type="submit">Sign In </button>
           </div>
         </form>
       </div>
