--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item modal-preauth">
-            <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal-signin-form">Sign In</button>
+            <button class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal-signin-form">Sign
+              In</button>
           </li>
           <li class="nav-item modal-postauth">
             <button class="btn btn-outline-primary">Home</button>
@@ -35,7 +36,7 @@
             <button class="btn btn-outline-primary">About</button>
           </li>
           <li class="nav-item modal-postauth">
-            <button class="btn btn-outline-danger">Sign Out</button>
+            <button id="menu-signOut" class="btn btn-outline-danger">Sign Out</button>
           </li>
         </ul>
         <div class="modal-postauth">
@@ -49,29 +50,47 @@
   </nav>
 
   <!-- Modal Sign In -->
-<div class="modal fade" id="modal-signin-form" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modal-signin-form-abel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modal-signin-form-label">Sign In Please!</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form id="form-signin" method="post">
-          <div>
-            <input type="email" name="email" placeholder="email address">
-          </div>
-          <div>
-            <input type="password" name="password" placeholder="password">
-          </div>
-          <div>
-            <button class="btn btn-outline-primary" type="submit">Sign In </button>
-          </div>
-        </form>
+  <div class="modal fade" id="modal-signin-form" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modal-signin-form-abel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-signin-form-label">Sign In Please!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="form-signin" method="post">
+            <div>
+              <input type="email" name="email" placeholder="email address">
+            </div>
+            <div>
+              <input type="password" name="password" placeholder="password">
+            </div>
+            <div>
+              <button class="btn btn-outline-primary" type="submit">Sign In </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modal-infobox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modal-infobox-title" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-infobox-title"></h5>
+        </div>
+        <div class="modal-body" id="modal-infobox-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
