--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
               In</button>
           </li>
           <li class="nav-item modal-postauth">
-            <button class="btn btn-outline-primary">Home</button>
+            <button id="menu-home" class="btn btn-outline-primary">Home</button>
           </li>
           <li class="nav-item modal-postauth">
-            <button class="btn btn-outline-primary">About</button>
+            <button id="menu-about"class="btn btn-outline-primary">About</button>
           </li>
           <li class="nav-item modal-postauth">
             <button id="menu-signOut" class="btn btn-outline-danger">Sign Out</button>
@@ -91,6 +91,9 @@
       </div>
     </div>
   </div>
+
+  <!-- MAIN ROOT -->
+  <div id = "root" class="bg-light m-3 p-4">Hello World</div>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
