--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link href="css/style.css" rel="stylesheet">
+
   <title>Discussion Forum</title>
 </head>
 
@@ -33,7 +34,7 @@
             <button id="menu-home" class="btn btn-outline-primary">Home</button>
           </li>
           <li class="nav-item modal-postauth">
-            <button id="menu-about"class="btn btn-outline-primary">About</button>
+            <button id="menu-about" class="btn btn-outline-primary">About</button>
           </li>
           <li class="nav-item modal-postauth">
             <button id="menu-signOut" class="btn btn-outline-danger">Sign Out</button>
@@ -49,13 +50,13 @@
     </div>
   </nav>
 
-  <!-- Modal Sign In -->
+  <!-- Modal: Sign In -->
   <div class="modal fade" id="modal-signin-form" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="modal-signin-form-abel" aria-hidden="true">
+    aria-labelledby="modal-signin-form-label" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modal-signin-form-label">Sign In Please!</h5>
+          <h5 class="modal-title" id="modal-signin-form-label">Sign In, Please!</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -67,7 +68,7 @@
               <input type="password" name="password" placeholder="password">
             </div>
             <div>
-              <button class="btn btn-outline-primary" type="submit">Sign In </button>
+              <button class="btn  btn-outline-primary" type="submit">Sign In</button>
             </div>
           </form>
         </div>
@@ -75,7 +76,8 @@
     </div>
   </div>
 
-  <!-- Modal -->
+
+  <!-- Modal: Popup Info box -->
   <div class="modal fade" id="modal-infobox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="modal-infobox-title" aria-hidden="true">
     <div class="modal-dialog">
@@ -83,8 +85,7 @@
         <div class="modal-header">
           <h5 class="modal-title" id="modal-infobox-title"></h5>
         </div>
-        <div class="modal-body" id="modal-infobox-body">
-        </div>
+        <div class="modal-body" id="modal-infobox-body"> </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
@@ -92,8 +93,37 @@
     </div>
   </div>
 
+  <!-- Modal: form -->
+  <div class="modal fade" id="modal-create-thread" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modal-create-thread-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-create-thread-label">Create New Thread</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="form-create-thread" method="post">
+            <div>
+              <input type="text" name="title" placeholder="Title of the thread" required minlength="2">
+            </div>
+            <div>
+              <input type="text" name="keywords" placeholder="Search keys separated by a blank" required minlength="2">
+            </div>
+            <div>
+              <textarea name="content" cols="50" rows="5" placeholder="Content of the thread" required minlength="5"></textarea>
+            </div>
+            <div>
+              <button type="submit" class="btn btn-outline-danger">Create</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- MAIN ROOT -->
-  <div id = "root" class="bg-light m-3 p-4">Hello World</div>
+  <div id="root" class="bg-light m-3 p-4">Hello World</div>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
