--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
           </li>
         </ul>
         <div class="modal-postauth">
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <form id="form-search" class="d-flex">
+            <input name="searchKeys" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
@@ -76,6 +76,34 @@
     </div>
   </div>
 
+  <!-- Modal: Craete Account -->
+  <div class="modal fade" id="modal-create-account" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="modal-create-account-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-create-account">Create Account</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div>
+              <input type="email" name="email" required placeholder="email address">
+            </div>
+            <div>
+              <input type="password" name="password" required minlength="6" placeholder="password">
+            </div>
+            <div>
+              <input type="password" name="passwordConfirm" required minlength="6" placeholder="confirm password">
+            </div>
+            <div>
+              <button type="submit" class="btn btn-outline-primary">Create</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Modal: Popup Info box -->
   <div class="modal fade" id="modal-infobox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -111,7 +139,8 @@
               <input type="text" name="keywords" placeholder="Search keys separated by a blank" required minlength="2">
             </div>
             <div>
-              <textarea name="content" cols="50" rows="5" placeholder="Content of the thread" required minlength="5"></textarea>
+              <textarea name="content" cols="50" rows="5" placeholder="Content of the thread" required
+                minlength="5"></textarea>
             </div>
             <div>
               <button type="submit" class="btn btn-outline-danger">Create</button>
