--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form>
+          <form method="post" id="form-create-account">
             <div>
               <input type="email" name="email" required placeholder="email address">
             </div>
